# core_mplugin

./: CMakeLists.txt
cmake/templates/: mico-core-config.cmake.in
include/mico/core/flow/: BlockSwitchFlow.h
src/core/: core_types.cpp  flow_factory.cpp
src/core/flow/: BlockSwitchFlow.cpp
